css: fixup project boxes not aligning in mobile

--- a/css/style.css
+++ b/css/style.css
@@ -341,9 +341,34 @@ h2,
   padding-right: 1.5rem;
   padding-left: 1.5rem;
 }
+
+
+@media (min-width: 768px) {
+  .col-md {
+    flex-basis: 0;
+    flex-grow: 1;
+    min-width: 0;
+    max-width: 100%;
+  }
+
   .col-md-6 {
     flex: 0 0 50%;
     max-width: 50%;
+  }
+}
+
+@media (min-width: 992px) {
+  .col-lg {
+    flex-basis: 0;
+    flex-grow: 1;
+    min-width: 0;
+    max-width: 100%;
+  }
+
+  .col-lg-auto {
+    flex: 0 0 auto;
+    width: auto;
+    max-width: 100%;
   }
 
   .col-lg-4 {
@@ -355,6 +380,7 @@ h2,
     flex: 0 0 66.6666666667%;
     max-width: 66.6666666667%;
   }
+}
 
 .btn {
   display: inline-block;
